--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -15,8 +15,10 @@
                     <li class="list-group-item text-muted">
                         <%= campground.location %>
                     </li>
+                    <li class="list-group-item">Submitted by <%= campground.author.username %></li>
                     <li class="list-group-item">$<%= campground.price %> a night </li>
                 </ul>
+                <% if (currentUser && campground.author.equals(currentUser._id)) { %> 
                 <div class="card-body">
                     <a class="card-link btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                     <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
@@ -25,6 +27,7 @@
                         </button>
                     </form>
                 </div>
+                <% } %> 
                 <div class="card-footer text-muted">
                     <a href="/campgrounds">All Campgrounds</a>
                 </div>
@@ -32,6 +35,7 @@
 
         </div>
         <div class="col-6">
+            <% if (currentUser) { %> 
             <h2>Leave a Review</h2>
             <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validated-form"
                 novalidate>
@@ -48,16 +52,19 @@
                 </div>
                 <button class="btn btn-success">Submit</button>
             </form>
+            <% } %> 
             <% for (let review of campground.reviews) { %>
                 <div class="card mb-3">
                     <div class="card-body">
-                        <h5 class="card-title">Rating: <%= review.rating %>
-                        </h5>
+                        <h5 class="card-title">Rating: <%= review.rating %></h5>
+                        <h6 class="card-subtitle mb-2 text-muted">By <%= review.author.username %> </h6>
                         <p>Review: <%= review.body %>
                         </p>
+                        <% if (currentUser && review.author.equals(currentUser._id)) { %> 
                         <form action="/campgrounds/<%=campground._id%>/reviews/<%= review._id %>?_method=DELETE" method="POST">
                             <button class="btn btn-sm btn-danger">Delete</button>
                         </form>
+                        <% } %> 
                     </div>
                 </div>
                 <% } %>
