--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+<div id="cluster-map"></div>
     <h1>All campgrounds</h1>
     <% for (let campground of campgrounds) { %>
         <div class="card mb-3">
@@ -30,3 +31,9 @@
             </div>
         </div>
         <% } %>
+        <script>
+            const mapToken = '<%-process.env.MAPBOX_TOKEN%>'
+            const campgrounds = {features: <%- JSON.stringify(campgrounds) %>}
+
+        </script>
+        <script src="/javascripts/clusterMap.js"></script>
