--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
-<div id="cluster-map"></div>
-    <h1>All campgrounds</h1>
+
+<div class="container">
     <% for (let campground of campgrounds) { %>
         <div class="card mb-3">
             <div class="row">
@@ -31,9 +31,4 @@
             </div>
         </div>
         <% } %>
-        <script>
-            const mapToken = '<%-process.env.MAPBOX_TOKEN%>'
-            const campgrounds = {features: <%- JSON.stringify(campgrounds) %>}
-
-        </script>
-        <script src="/javascripts/clusterMap.js"></script>
+</div>
