--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,9 +16,20 @@
 
 <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar') %>
+    <% if ((typeof(isIndex) !== 'undefined') && isIndex) { %> 
+        <div class="container-fluid p-0 mb-5 mx-0 h-50">
+            <div id="cluster-map" class="mx-0"></div>
+        </div>
+        
+        <script>
+            const mapToken = '<%-process.env.MAPBOX_TOKEN%>'
+            const campgrounds = {features: <%- JSON.stringify(campgrounds) %>}
+        </script>
+        <script src="/javascripts/clusterMap.js"></script>
+    <% } %> 
         <main class="container mt-5">
             <%- include('../partials/flash') %>
-                <%- body %>
+            <%- body %>
         </main>
         <%- include('../partials/footer') %>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
