ready to deploy

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,7 +5,9 @@
             <h4 class="alert-heading"><%= err.message %> </h4>
             <p>Aww Something went wrong</p>
             <hr>
+            <% if (process.env.NODE_ENV !== "production") { %> 
             <p class="mb-0"><%= err.stack %> </p>
+            <% } %> 
         </div>
     </div>
 </div>
